[workspace]

members = [
    "simulator",
    "Benchmarks/desim_benchmark",
    "Benchmarks/desim_mpmc",
    "Benchmarks/simrs_benchmark",
    "Benchmarks/simulator_benchmark",
    "Benchmarks/All_Benchmarks",
    "Benchmarks/simulator_nightly_benchmark",
    "simulator_nightly",
]

[profile.release]
lto = "fat"
codegen-units = 1
