[workspace]

members = [
    "Benchmarks/desim_benchmark",
    "Benchmarks/desim_mpmc",
    "Benchmarks/simrs_benchmark",
    "Benchmarks/simulator_benchmark",
    "Benchmarks/All_Benchmarks",
    "Benchmarks/simulator_nightly_benchmark",
    "Benchmarks/simulator_nightly_mpmc",
    "Benchmarks/simulator_mpmc",
    "Benchmarks/simrs_mpmc",
    "simulator",
    "simulator_nightly",
]

[profile.release]
lto = "fat"
codegen-units = 1
debug = true