[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "main"
harness = false

[dependencies]
simulator_benchmark = { path = "../simulator_benchmark", version = "0.1.0" }
desim_benchmark = { path = "../desim_benchmark", version = "0.1.0" }
simrs_benchmark = { path = "../simrs_benchmark", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3.5"